# tiptoe

./: Makefile  readme.markdown  tiptoe.cpp  utility.cpp
UnitTest++/: TestUnitTest++
aes/: Makefile
average_length/: main  main.cpp
codec2/: main  main.c  main.cpp
downupsample/: Makefile  main.cpp
dumb_receive_and_record_data/: Makefile  main.cpp
dumb_transmit_data/: Makefile  main.cpp
frequency_response/: main  main.cpp
hamming_time/: Makefile  main  main.cpp
main/: tiptoe.cpp  utility.cpp
print_transcode/: main  main.cpp
receive/: main.cpp  main.cpp.safe
receive_and_record_data/: .gitignore  Makefile  main.cpp
receive_audio/: Makefile  main.cpp
receive_spectrum/: Makefile  main.cpp
record/: main.cpp
ternary_receive_and_record_data/: Makefile  main.cpp
ternary_transmit_data/: Makefile  main.cpp
tiptoe/: Makefile  main  main.cpp
transmit/: main  main.cpp  transcode.cpp
transmit_audio/: Makefile  main.c  main.cpp
transmit_data/: Makefile  main.cpp
transmit_faux/: .gitignore  main.cpp
transmit_spectrum/: main.cpp
transmit_vanilla/: README
utilities/: constants.cpp  convert.cpp  (+8 more)
utilities/test/: .gitignore  CMakeLists.txt  Main.cpp  OLDMain.cpp  OLDMakefile  convert_test.cpp  delta_finder_test.cpp  demodulate_test.cpp  downsample_test.cpp  extract_test.cpp  extractor_test.cpp  hamming_test.cpp  reverse_transcode_test.cpp  suite  transcode_test.cpp  transcoder_test.cpp  transmit_test.cpp  unpacker_test.cpp  untranscoder_test.cpp  upsample_test.cpp
utilities/test/mybuild/: CMakeCache.txt  Makefile  cmake_install.cmake
(+71 files in other folders)
